# fstorage

./: Makefile.am  build.sh  configure.ac
clients/php/: Makefile  config.m4  fstorage_client_php.cpp  fstorage_client_php.h  test.php
clients/python/: LICENSE  fstorage_client_python.c  setup.py
docs/: fstorage_doc.odt  fstoraged.sample.conf
examples/C/: example1.c
examples/python/: example1.py
src/: Makefile.am
src/btp/: btp.c  btp_arg.c  btp_pkg.c  btp_value.c
src/common/: cfg.c  common.c  crc.c  keys.c  log.c  mime_types.c  ns.c  str.c
src/fstoraged/: Makefile.am  fstoraged.c  fstoraged.h  fstoraged_client.c  fstoraged_client.h  fstoraged_conf.c  fstoraged_conf.h  fstoraged_engine.c  fstoraged_engine.h  fstoraged_events.c  fstoraged_events.h  fstoraged_fstp.c  fstoraged_fstp.h  fstoraged_hdr.c  fstoraged_hdr.h  fstoraged_http.c  fstoraged_http.h  fstoraged_session.c  fstoraged_session.h
src/include/: fstorage++.h  fstorage.h  fstorage_backend.h  fstorage_btp.h  fstorage_cfg.h  fstorage_common.h  fstorage_conf.h  fstorage_context.h  fstorage_crc.h  fstorage_errcode.h  fstorage_impl.h  fstorage_keys.h  fstorage_log.h  fstorage_mime_types.h  fstorage_ns.h  fstorage_opcode.h  fstorage_str.h
src/libfstorage/: Makefile.am  fstorage.c  fstorage_backend.c  fstorage_conf.c  fstorage_context.c
src/libfstorage++/: Makefile.am  fstorage.cpp  fstorage_except.cpp
src/tests/: Makefile.am  misc.c  misc.h  test_crc.c  test_libfstorage.c
